<resources>
    <string name="app_name">Library Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

<<<<<<< HEAD
    <string name="email">temp_email</string>
    <string name="user_password">temp_password</string>
    <string name="number">temp_street_number</string>
    <string name="name">temp_street_name</string>
    <string name="city">temp_city</string>
    <string name="country">temp_country</string>
    <string name="save_button">save</string>




    <string name="edit_button">Edit</string>
    <string name="profile_view">Profile View</string>

=======
>>>>>>> d4231a6fd08234114e50499697a090cb55c83d50
    <string name="username">Enter Username</string>
    <string name="itemTitle">Item Instances</string>
    <string name="password">Enter Password</string>
    <string name="makeReservation">Make Reservation</string>
    <string name="makeLoan">Make Loan</string>
    <string name="login_button">Login</string>
    <string name="id">id</string>
    <string name="name">name</string>
    <string name="date_published">Date Published</string>
    <string name="person_name_label">Name</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="streetNum_label">Street Number</string>
    <string name="street_label">Street Name</string>
    <string name="city_label">City</string>
    <string name="country_label">Country</string>
<<<<<<< HEAD

=======
    <string name="view_reservations">My reservations</string>
    <string name="view_loans">My loans</string>
    <string name="email">temp_email</string>
    <!-- <string name="password">temp_password</string> -->
    <string name="number">temp_street_number</string>
<!--    <string name="name">temp_street_name</string>-->
    <string name="city">temp_city</string>
    <string name="country">temp_country</string>



    <string name="edit_button">Edit</string>
    <string name="profile_view">Profile View</string>
    <string name="view_items">View items</string>
>>>>>>> d4231a6fd08234114e50499697a090cb55c83d50
</resources>