<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
                <TextView
                android:id="@+id/profile_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="left"
                android:text="@string/profile_view"
                android:textColor="#76323F"
                android:fontFamily="sans-serif-medium"
                android:textSize="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/edit_button"
                android:onClick="editProfile"/>
        </LinearLayout>


        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="#FF0000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:text="@string/email"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:text="@string/password"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/street_number"
            android:text="@string/number"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/street_name"
            android:text="@string/name"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:text="@string/city"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/country"
            android:text="@string/country"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>