<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile"
    android:background="#D7CEC7">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button4"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="#C09F80"
        android:fontFamily="monospace"
        android:onClick="homepage"
        android:text="homepage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_button5"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:layout_marginStart="284dp"
        android:layout_marginBottom="16dp"
        android:background="#C09F80"
        android:fontFamily="monospace"

        android:onClick="signOut"
        android:text="sign out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/profile_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:layout_gravity="left"
                android:text="@string/profile_view"
                android:textColor="#000000"
                android:fontFamily="serif-monospace"
                android:textSize="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/edit_button"
                android:onClick="toEditProfile"/>
        </LinearLayout>

        <TextView
            android:id="@+id/error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:text=""
            android:textColor="#FF0000"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:text="@string/email"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:text="@string/user_password"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/street_number"
            android:text="@string/number"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/street_name"
            android:text="@string/temp_street_name"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:text="@string/city"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/country"
            android:text="@string/country"
            android:fontFamily="sans-serif-medium"
            android:textSize="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>