<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tableTitle"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/itemTitle"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:typeface="serif"
        android:gravity="center"
       />
    <TableLayout
        android:id="@+id/itemTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tableTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toBottomOf="@id/tableTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >
        <Button
            android:id="@+id/makeReservationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makeReservation"
            android:onClick="makeReservation"

            />

        <Button
            android:id="@+id/makeLoanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makeLoan"

            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>